# rvem

./: .gitignore  Cargo.toml  Makefile  NOTICE  README.md  TODO.md  build.rs  fib.s  fib2.s  hello.s  rustfmt.toml  strlen.s
src/: inst.rs  lib.rs  main.rs  reg.rs  run.in  rv32m.tab
tests/: cli.rs
tests/data/: Makefile  complexMul  complexMul.s  fac  fac.s  fib  fib1.s  hello  helloc  strlen
