[package]
name = "rvem"
description = "a RISC-V emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.16"
bytemuck = "1.19.0"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
goblin = "0.9.0"
log = "0.4.22"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.65"

[build-dependencies]
proc-macro2 = "1.0.88"
prettyplease = "0.2.25"
quote = "1.0.37"
syn = "2.0.85"

[features]
default = ["rv32m"]
rv32m = []
