[package]
name = "rvem"
description = "A RISC-V emulator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Cliff Snyder <cliff.snyder@gmail.com>"]
repository = "https://github.com/cliffeh/rvem"
readme = "README.md"

[dependencies]
assert_cmd = "2.0.16"
bytemuck = "1.19.0"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
goblin = "0.9.2"
log = "0.4.22"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.67"

[build-dependencies]
proc-macro2 = "1.0.88"
prettyplease = "0.2.25"
quote = "1.0.37"
syn = "2.0.85"

[features]
default = ["rv32m"]
rv32m = []
