[package]
name = "rvem"
description = "A RISC-V emulator"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Cliff Snyder <cliff.snyder@gmail.com>"]
repository = "https://github.com/cliffeh/rvem"
readme = "README.md"

[dependencies]
assert_cmd = "2.1.2"
bytemuck = "1.24.0"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
goblin = "0.10.4"
log = "0.4.29"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"

[build-dependencies]
proc-macro2 = "1.0.88"
prettyplease = "0.2.37"
quote = "1.0.43"
syn = "2.0.85"

[features]
default = ["rv32m"]
rv32m = []
